chart/templates/kafka1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app-name: kafka1
  name: kafka1
spec:
  replicas: 1
  selector:
    matchLabels:
      app-name: kafka1
  strategy: {}
  template:
    metadata:
      annotations:
      creationTimestamp: null
      labels:
        tg-bot-tgbot-network: "true"
        app-name: kafka1
    spec:
      securityContext:
        runAsUser: 0 #?
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: INTERNAL://kafka1:9092,DOCKER://kafka1:29092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: INTERNAL
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: INTERNAL:PLAINTEXT,DOCKER:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper1:2181
          image: confluentinc/cp-kafka:latest
          name: kafka1
          ports:
            - containerPort: 29092
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/kafka/data
              name: kafka-data
      restartPolicy: Always
      volumes:
        - name: kafka-data
          persistentVolumeClaim:
            claimName: kafka-pvc
status: {}
