chart/templates/kafka1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  creationTimestamp: null
  labels:
    app-name: kafka1
  name: kafka1
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
    - name: "9092"
      port: 9092
      targetPort: 9092
  selector:
    app-name: kafka1
status:
  loadBalancer: {}
